fix: z-index

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -41,6 +41,7 @@
     left: 5px;
     padding: 15px 20px;
     background: #6096bab2;
+    z-index: 5;
   }
 
   .tap:hover {
